# StmEpic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/ISSUE_TEMPLATE/: new-feature-template.md
.github/workflows/: build_gaet_11.3.1.yml  build_gaet_12.3.1.yml  build_gaet_13.3.1.yml  build_gnu_arm.yml  build_gnu_arm11.yml  build_gnu_arm12.yml  build_gnu_arm13.yml  build_gnu_arm14.yml  cmake-build.yml  formater.yml
CanControl/: CMakeLists.txt
Encoders/: CMakeLists.txt
Movement/src/: controler_linear.cpp  controler_pass_through.cpp  controler_pid.cpp
MovementControl/: CMakeLists.txt
Sensors/: CMakeLists.txt
SteperMotor/: CMakeLists.txt
UsbPrograming/: CMakeLists.txt
cmake/: helper.cmake
docs/pages/: geting_started.md  main_page.md
src/Algorithm/: CMakeLists.txt  random_number_generator.hpp  sha256.cpp  sha256.hpp  vectors3d.hpp
src/Algorithm/inc/: sha256.hpp
src/Algorithm/src/: sha256.cpp
src/BoardId/: CMakeLists.txt
src/BoardId/inc/: board_id.hpp
src/BoardId/src/: board_id.cpp
src/CanControl/: CMakeLists.txt  can_control.hpp
src/CanControl/inc/: can_control.hpp
src/CanControl/src/: can_control.cpp
src/Containers/: circular_buffor.hpp
src/Containers/inc/: circular_buffor.hpp  list.hpp
src/Controllers/: pid.cpp
src/DFU/: CMakeLists.txt  dfu_usb_programer.cpp  dfu_usb_programer.hpp
src/DFU/inc/: dfu_usb_programer.hpp
src/DFU/src/: dfu_usb_programer.cpp
src/Device/: CMakeLists.txt  can.cpp  can.hpp  device.cpp  device.hpp  gpio.cpp  gpio.hpp  hardware.cpp  hardware.hpp  i2c.cpp  i2c.hpp  interfaces.hpp  simple_task.cpp  simple_task.hpp  uart.cpp  uart.hpp
src/Device/can/can/: can2.0.cpp  can2.0.hpp
src/Device/can/fdcan/: fdcan.cpp  fdcan.hpp
src/Device/inc/: device.hpp
src/Display/: CMakeLists.txt  ws28.cpp  ws28.hpp  ws2812b.cpp  ws2812b.hpp
src/Encoders/: AS5600.cpp  AS5600.hpp  CMakeLists.txt  MT6701.cpp  MT6701.hpp  encoder.hpp  encoder_magnetic.cpp  encoder_magnetic.hpp
src/Encoders/inc/: encoder.hpp  encoder_magnetic.hpp
src/Encoders/src/: encoder.cpp  encoder_magnetic.cpp
src/Filters/: CMakeLists.txt  filter.hpp  filter_alfa_beta.cpp  filter_alfa_beta.hpp  filter_moving_avarage.cpp  filter_moving_avarage.hpp
src/Filters/inc/: filter.hpp  filter_alfa_beta.hpp  filter_moving_avarage.hpp
src/Filters/src/: filter.cpp  filter_alfa_beta.cpp  filter_moving_avarage.cpp
src/Gpio/: CMakeLists.txt  gpio.hpp  pin.hpp
src/Gpio/inc/: pin.hpp
src/Hardware/: CMakeLists.txt  can.hpp  gpio.cpp  gpio.hpp  hardware.hpp  i2c.cpp  i2c.hpp  uart.cpp  uart.hpp
src/Hardware/can/can/: can2.0.cpp  can2.0.hpp
src/Hardware/can/fdcan/: fdcan.cpp  fdcan.hpp
src/Hash/: CMakeLists.txt
src/Hash/inc/: sha256.hpp
src/Hash/src/: sha256.cpp
src/Inc/: status.hpp  stmepic.hpp
src/Logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/Logger/inc/: logger.hpp
src/Logger/src/: logger.cpp
src/Memory/: CMakeLists.txt  fram_i2c.cpp  fram_i2c.hpp  memory_fram.cpp  memory_fram.hpp
src/Memory/inc/: fram_i2c.hpp  fram_menager.hpp  memory_fram.hpp
src/Memory/src/: fram_i2c.cpp  fram_menager.cpp  memory_fram.cpp
src/Motor/: CMakeLists.txt  bldc_motor.cpp  bldc_motor.hpp  motor.cpp  motor.hpp  servo_motor.cpp  servo_motor.hpp  steper_motor.cpp  steper_motor.hpp  vesc_bldc.cpp  vesc_bldc.hpp
src/Motor/inc/: motor.hpp  steper_motor.hpp
src/Motor/src/: motor.cpp  steper_motor.cpp
src/Movement/: CMakeLists.txt  controler_linear.cpp  controler_linear.hpp  controler_pass_through.cpp  controler_pass_through.hpp  controler_pid.cpp  controler_pid.hpp  movement_controler.cpp  movement_controler.hpp
src/Movement/inc/: controler_linear.hpp  controler_pass_through.hpp  controler_pid.hpp  movement_controler.hpp
src/Movement/src/: controler_linear.cpp  controler_pass_through.cpp  controler_pid.cpp  movement_controler.cpp
src/Sensors/: BMP280.cpp  BMP280.hpp  BNO055.cpp  BNO055.hpp  CMakeLists.txt  ICM20948.cpp  ICM20948.hpp  MCP9700AT.cpp  MCP9700AT.hpp  imu.hpp  ntc_termistors.cpp  ntc_termistors.hpp
src/Sensors/inc/: MCP9700AT.hpp  ntc_termistors.hpp
src/Sensors/src/: MCP9700AT.cpp  ntc_termistors.cpp
src/Status/: CMakeLists.txt  stmepic_status.hpp
src/Status/inc/: stmepic_status.hpp
src/Status/src/: stmepic_status.cpp
src/SteperMotor/inc/: steper_motor.hpp
src/SteperMotor/src/: steper_motor.cpp
src/TeleGeo/: CMakeLists.txt  atmodem.cpp  atmodem.hpp  nmea.cpp  nmea.hpp
src/Timing/: CMakeLists.txt  Timing.cpp  Timing.hpp
src/Timing/inc/: Timing.hpp
src/Timing/src/: Timing.cpp
src/UsbPrograming/inc/: usb_programer.hpp
src/UsbPrograming/src/: usb_programer.cpp
src/config/: CMakeLists.txt  freertos.cpp  stmepic.hpp
src/config/inc/: stmepic.hpp
